--- a/src/app/pages/member/chat/chat.page.scss
+++ b/src/app/pages/member/chat/chat.page.scss
@@ -134,3 +134,8 @@ a:visited{
     border-left-width: 0;
     right: -5px;
 }
+.processLink{
+    color:red;
+    font-weight: bold;
+    font-size: 20px;
+}
