--- a/src/app/pages/member/problem-detail/problem-detail.page.html
+++ b/src/app/pages/member/problem-detail/problem-detail.page.html
@@ -17,6 +17,10 @@
       <ion-label>目的地国家</ion-label>
       <ion-note slot="end">{{data?.CountryName}}</ion-note>
     </ion-item>
+    <ion-item>
+      <ion-label>价格名称</ion-label>
+      <ion-note slot="end">{{data?.PriceName}}</ion-note>
+    </ion-item>
     <ion-item *ngIf="data?.Problem?.Status==0">
       <ion-label>处理期限</ion-label>
       <ion-note slot="end">{{data?.Problem?.EndDate}}</ion-note>
