交货时间改为计价时间

--- a/src/app/pages/member/delivery-record-detail/delivery-record-detail.page.html
+++ b/src/app/pages/member/delivery-record-detail/delivery-record-detail.page.html
@@ -74,7 +74,7 @@
           <ion-note slot="end">{{data?.ReceiveGoodsNo}}</ion-note>
         </ion-item>
         <ion-item>
-          <ion-label>日期</ion-label>
+          <ion-label>计价时间</ion-label>
           <ion-note slot="end">{{data?.Date}}</ion-note>
         </ion-item>
       </ion-list>
