--- a/src/app/pages/member/delivery-record/delivery-record.page.html
+++ b/src/app/pages/member/delivery-record/delivery-record.page.html
@@ -25,7 +25,7 @@
       <ion-label>
         <h3>{{item.PriceName}}</h3>
         <p>计费重:{{item.Weight}}Kg</p>
-        <p>交货日期:{{item.Date}}</p>
+        <p>计价时间:{{item.Date}}</p>
       </ion-label>
       <ion-note slot="end" class="ion-margin-vertical">{{item.Amount |currency:'CNY'}}</ion-note>
     </ion-item>
