--- a/src/app/pages/member/return-list/return-list.page.html
+++ b/src/app/pages/member/return-list/return-list.page.html
@@ -36,7 +36,7 @@
           <ion-label>
             <h3>{{item.PriceName}}</h3>
             <p>计费重:{{item.Weight}}Kg</p>
-            <p>交货日期:{{item.Date}}</p>
+            <p>计价时间:{{item.Date}}</p>
           </ion-label>
 
           <ion-note slot="end" class="ion-margin-vertical">￥{{item.Amount}}</ion-note>
