修复问题件处理详情页面不显示问题

--- a/src/app/pages/member/problem-detail/problem-detail.page.html
+++ b/src/app/pages/member/problem-detail/problem-detail.page.html
@@ -34,7 +34,7 @@
     </ion-item>
   </ion-list>
   <ion-item
-    *ngIf="data?.ProcessResult!=null && data?.Problem?.Status==0 then problemActions else btnContactCS"
+    *ngIf="data?.Problem.ProcessTypeList.length>0 && data?.Problem?.Status==0 then problemActions else btnContactCS"
   >
   </ion-item>
 
