--- a/src/app/pages/member/distribute-manager/user-info/user-info.page.html
+++ b/src/app/pages/member/distribute-manager/user-info/user-info.page.html
@@ -29,7 +29,7 @@
     <ion-item>
       <ion-label>手机号 <ion-text color="danger">*</ion-text>
       </ion-label>
-      <ion-input formControlName="MobilePhone" type="text"></ion-input>
+      <ion-input formControlName="MobilePhone" type="text" disabled></ion-input>
     </ion-item>
     <div class="validation-errors ion-padding-start">
       <div *ngFor="let validation of validation_messages.MobilePhone">
