--- a/src/app/pages/tabs/member/member.page.html
+++ b/src/app/pages/tabs/member/member.page.html
@@ -1,6 +1,6 @@
 <ion-header translucent *ngIf="!isLogin">
   <ion-toolbar>
-     
+
     <ion-title>登录</ion-title>
     <ion-buttons slot="primary">
       <ion-button (click)="forgetPasswordClick()">
@@ -17,12 +17,12 @@
         <ion-item>
           <ion-label position="stacked">用户名 <ion-text color="danger">*</ion-text>
           </ion-label>
-          <ion-input type="text" formControlName="username"  placeholder="请输入用户名或者手机号码"></ion-input>
+          <ion-input type="text" formControlName="username" placeholder="请输入用户名或者手机号码"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="stacked">密码 <ion-text color="danger">*</ion-text>
           </ion-label>
-          <ion-input type="password" formControlName="password"  placeholder="请输入密码 区分大小写"></ion-input>
+          <ion-input type="password" formControlName="password" placeholder="请输入密码 区分大小写"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label>记住我</ion-label>
@@ -51,9 +51,12 @@
             <img src="assets/imgs/member-16.png" style="width:35px;height:35px;">
 
           </ion-col>
-          <ion-col col-4 class="ion-align-self-center" class="ion-text-right" >
-              <img src="assets/imgs/member-15.png"  class="my-badge1" [ngStyle]="{'margin-right':userInfo?.UnReadMessageCount > 0? '12px;': ''}" (click)="openMessage()" *ngIf="customerType==0">
-              <div *ngIf="userInfo?.UnReadMessageCount>0" class="my-badge">{{userInfo?.UnReadMessageCount>99?'99':userInfo.UnReadMessageCount}}</div>
+          <ion-col col-4 class="ion-align-self-center" class="ion-text-right">
+            <img src="assets/imgs/member-15.png" class="my-badge1"
+              [ngStyle]="{'margin-right':userInfo?.UnReadMessageCount > 0? '12px;': ''}" (click)="openMessage()"
+              *ngIf="customerType==0">
+            <div *ngIf="userInfo?.UnReadMessageCount>0" class="my-badge">
+              {{userInfo?.UnReadMessageCount>99?'99':userInfo.UnReadMessageCount}}</div>
           </ion-col>
         </ion-row>
         <ion-row>
@@ -62,7 +65,7 @@
           </ion-col>
           <ion-col col-8 class="ion-text-center">
 
-            <ion-button  id="btnPerson" (click)="openChat()" fill="clear">
+            <ion-button id="btnPerson" (click)="openChat()" fill="clear">
               我的客服专员
               <ion-icon name="arrow-forward"></ion-icon>
             </ion-button>
@@ -72,54 +75,55 @@
           </ion-col>
         </ion-row>
       </ion-grid>
+      <div *ngIf="customerType!=3">
+        <ion-grid id="info">
+          <ion-row class="ion-align-items-center">
+            <ion-col col-4>
+              <div class="ion-text-center">
 
-      <ion-grid id="info">
-        <ion-row class="ion-align-items-center">
-          <ion-col col-4>
-            <div class="ion-text-center">
+                <div class="title"> {{userInfo?.Quantity1}}</div>
+                待确认运单
 
-              <div class="title"> {{userInfo?.Quantity1}}</div>
-              待确认运单
+              </div>
+            </ion-col>
+            <ion-col col-4 class="ion-text-center">
+              <div class="title"> {{userInfo?.Quantity2}}</div>
+              问题件
+            </ion-col>
+          </ion-row>
 
-            </div>
-          </ion-col>
-          <ion-col col-4 class="ion-text-center">
-            <div class="title"> {{userInfo?.Quantity2}}</div>
-            问题件
-          </ion-col>
-        </ion-row>
+        </ion-grid>
 
-      </ion-grid>
+        <ion-grid id="info">
+          <ion-row class="ion-align-items-center">
+            <ion-col col-4 *ngFor="let item of currencyAmount">
+              <div class="ion-text-center">
+                <div class="title">{{item.split(":")[1]}}</div>
+                <span class="smallFont">
+                  欠款({{item.split(":")[0]}})
+                </span>
+              </div>
+            </ion-col>
+          </ion-row>
 
-      <ion-grid id="info">
-        <ion-row class="ion-align-items-center">
-          <ion-col col-4 *ngFor="let item of currencyAmount">
-            <div class="ion-text-center">
-              <div class="title">{{item.split(":")[1]}}</div>
-              <span class="smallFont">
-                欠款({{item.split(":")[0]}})
-              </span>
-            </div>
-          </ion-col>
-        </ion-row>
-
-      </ion-grid>
-      
+        </ion-grid>
+      </div>
     </div>
     <ion-grid id="menu-grid">
       <ion-row *ngFor="let row of menus.rows" class="row">
         <ion-col *ngFor="let item of row.items" class="col">
           <div (click)="menuClick(item)" class="ion-text-center">
             <div>
-              <img [src]="item.image" style="max-width:1.5rem;height:auto;"> </div>
+              <img [src]="item.image" style="max-width:1.5rem;height:auto;">
+            </div>
             <div class="menu-title">{{item.title}}</div>
           </div>
         </ion-col>
       </ion-row>
     </ion-grid>
 
-  
-      <ion-button expand="full"  (click)="logOff()" *ngIf="isLogin" class="ion-margin-top">退出登录</ion-button>
-    
+
+    <ion-button expand="full" (click)="logOff()" *ngIf="isLogin" class="ion-margin-top">退出登录</ion-button>
+
   </div>
 </ion-content>
