--- a/src/app/pages/member/distribute-manager/partners/partners.page.html
+++ b/src/app/pages/member/distribute-manager/partners/partners.page.html
@@ -35,42 +35,43 @@
       <ion-select-option value="desc">时间倒序</ion-select-option>
     </ion-select>
   </ion-item>
-  <ion-grid>
-    <ion-row class="tableHeader">
-      <ion-col>
+  <table>
+    <thead>
+      <td>
         序号
-      </ion-col>
-      <ion-col>
+      </td>
+      <td>
         伙伴
-      </ion-col>
-      <ion-col>
+      </td>
+      <td>
         联系方式
-      </ion-col>
-      <ion-col>
+      </td>
+      <td>
         加入时间
-      </ion-col>
-      <ion-col>
+      </td>
+      <td>
         上次下单时间
-      </ion-col>
-    </ion-row>
-
-    <ion-row *ngFor="let row of partners?.Rows;let i=index" class="tableBody">
-      <ion-col>
-        {{i+1}}
-      </ion-col>
-      <ion-col>
-        {{row?.CustomerName}}
-      </ion-col>
-      <ion-col>
-      </ion-col>
-      <ion-col>
-        {{row?.CreateAtStr}}
-      </ion-col>
-      <ion-col>
-        {{row?.LastRgdCreateAtStr}}
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+      </td>
+    </thead>
+    <tbody>
+      <tr *ngFor="let row of partners?.Rows;let i=index">
+        <td>
+          {{i+1}}
+        </td>
+        <td>
+          {{row?.CustomerName}}
+        </td>
+        <td>
+        </td>
+        <td>
+          {{row?.CreateAtStr}}
+        </td>
+        <td>
+          {{row?.LastRgdCreateAtStr}}
+        </td>
+      </tr>
+    </tbody>
+  </table>
   <ion-item *ngIf="partners?.Rows?.length==0">
     -暂无伙伴-
   </ion-item>
