--- a/src/app/pages/member/distribute-manager/profit/profit.page.html
+++ b/src/app/pages/member/distribute-manager/profit/profit.page.html
@@ -30,43 +30,44 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-grid>
-    <ion-row class="tableHeader">
-      <ion-col>
+  <table>
+    <thead>
+      <td>
         序号
-      </ion-col>
-      <ion-col>
+      </td>
+      <td>
         伙伴
-      </ion-col>
-      <ion-col>
+      </td>
+      <td>
         下单时间
-      </ion-col>
-      <ion-col>
+      </td>
+      <td>
         预估收益
-      </ion-col>
-      <ion-col>
+      </td>
+      <td>
         实际收益
-      </ion-col>
-    </ion-row>
-
-    <ion-row *ngFor="let row of profits?.Rows;let i=index" class="tableBody">
-      <ion-col>
-        {{i+1}}
-      </ion-col>
-      <ion-col>
-        {{row?.CustomerName}}
-      </ion-col>
-      <ion-col>
-        {{row?.CreateAtStr}}
-      </ion-col>
-      <ion-col>
-        {{row?.Amount}}
-      </ion-col>
-      <ion-col>
-        {{row?.FinalAmount}}
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+      </td>
+    </thead>
+    <tbody>
+      <tr *ngFor="let row of profits?.Rows;let i=index">
+        <td>
+          {{i+1}}
+        </td>
+        <td>
+          {{row?.CustomerName}}
+        </td>
+        <td>
+          {{row?.CreateAtStr}}
+        </td>
+        <td>
+          {{row?.Amount}}
+        </td>
+        <td>
+          {{row?.FinalAmount}}
+        </td>
+      </tr>
+    </tbody>
+  </table>
   <ion-item *ngIf="profits?.Rows?.length==0">
     -暂无收益-
   </ion-item>
