添加外币转换人民币支付功能

--- a/src/app/pages/member/wechat-pay/wechat-pay.page.scss
+++ b/src/app/pages/member/wechat-pay/wechat-pay.page.scss
@@ -36,3 +36,11 @@
 .checkbox-ios .checkbox-checked{
     background-color: #004ea2;
 }
+.otherCurrencyAmountFont{
+    font-size: 13px;
+    color: red;
+}
+.tips{
+    background: wheat;
+    font-size: 14px;
+}
