--- a/src/app/pages/member/wechat-pay/wechat-pay.page.html
+++ b/src/app/pages/member/wechat-pay/wechat-pay.page.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar>
-      <ion-buttons slot="start">
-          <ion-back-button></ion-back-button>
-        </ion-buttons>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>微信支付</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="payHistory()">
@@ -13,6 +13,9 @@
 </ion-header>
 
 <ion-content>
+  <div class="tips" *ngIf="this.cid!=1">
+    <ion-label color="danger">当前正在支付外币：{{this.data?.PayMessage}}</ion-label>
+  </div>
   <div class="my-head">
     <div class="total-amount">{{data?.TotalAmount|currency:'CNY'}}</div>
     <div class="total-text">支付金额</div>
@@ -31,13 +34,15 @@
   <ion-list style="clear: both;">
     <ion-item>
       <ion-label>运费金额</ion-label>
-      <ion-input type="number" inputmode="decimal" min="0.01" placeholder="请输入运费金额" [(ngModel)]="data.Amount" (ngModelChange)="amountChange()" [disabled]="amountInputDisable">
+      <ion-input type="number" inputmode="decimal" min="0.01" placeholder="请输入运费金额" [(ngModel)]="data.OriginalAmount"
+        (ngModelChange)="amountChange()" [disabled]="amountInputDisable">
       </ion-input>
+      <ion-label slot="end">{{data?.CurrencyName?.length>0?data?.CurrencyName:"人民币"}}</ion-label>
     </ion-item>
 
     <ion-item>
       <ion-label>产品类型</ion-label>
-      <ion-select  interface="popover" placeholder="请选择产品类型" (ionChange)="typeChange($event)" value="0">
+      <ion-select interface="popover" placeholder="请选择产品类型" (ionChange)="typeChange($event)" value="0">
         <ion-select-option *ngFor="let item of productTypes" value="{{item.Key}}">{{item.Value}}</ion-select-option>
       </ion-select>
     </ion-item>
@@ -50,6 +55,12 @@
 
     <ion-item detail (click)="showDesc(1)">
       <ion-label>支付说明</ion-label>
+    </ion-item>
+    <ion-item class="otherCurrencyAmountFont" *ngIf="otherCurrencyAmounts?.length>0">
+      <ion-label>存在其他币种欠款：
+        <span *ngFor="let item of otherCurrencyAmounts">{{item.Amount}}({{item.Name}});</span>
+      </ion-label>
+      <a (click)="presentActionSheet()">点击这里支付</a>
     </ion-item>
   </ion-list>
 
