--- a/src/app/pages/tabs/member/member.page.html
+++ b/src/app/pages/tabs/member/member.page.html
@@ -96,11 +96,11 @@
 
         <ion-grid id="info">
           <ion-row class="ion-align-items-center">
-            <ion-col col-4 *ngFor="let item of currencyAmount">
+            <ion-col col-4 *ngFor="let item of currencyAmount" (click)="wechatPay(item.Id)">
               <div class="ion-text-center">
-                <div class="title">{{item.split(":")[1]}}</div>
+                <div class="title">{{item.Amount}}</div>
                 <span class="smallFont">
-                  欠款({{item.split(":")[0]}})
+                  欠款({{item.Name}})
                 </span>
               </div>
             </ion-col>
