--- a/src/app/pages/member/wechat-pay/wechat-pay.page.html
+++ b/src/app/pages/member/wechat-pay/wechat-pay.page.html
@@ -32,12 +32,15 @@
   </div>
 
   <ion-list style="clear: both;">
+    <ion-item *ngIf="this.cid!=1">
+      <ion-label>当前金额将优先转换外币：{{data?.CurrencyName?.length>0?data?.CurrencyName:"人民币"}}</ion-label>
+    </ion-item>
     <ion-item>
       <ion-label>运费金额</ion-label>
-      <ion-input type="number" inputmode="decimal" min="0.01" placeholder="请输入运费金额" [(ngModel)]="data.OriginalAmount"
+      <ion-input type="number" inputmode="decimal" min="0.01" placeholder="请输入运费金额" [(ngModel)]="data.Amount"
         (ngModelChange)="amountChange()" [disabled]="amountInputDisable">
       </ion-input>
-      <ion-label slot="end">{{data?.CurrencyName?.length>0?data?.CurrencyName:"人民币"}}</ion-label>
+      <ion-label slot="end">人民币</ion-label>
     </ion-item>
 
     <ion-item>
