--- a/src/app/pages/member/delivery-record-detail/delivery-record-detail.page.scss
+++ b/src/app/pages/member/delivery-record-detail/delivery-record-detail.page.scss
@@ -18,6 +18,12 @@ ion-button{
 .packageNumber:hover{
     background: #cccdd3;
 }
+.sub_font_color{
+    color: #999999
+  }
+  .sub_font_size{
+    font-size: 13px;
+  }
 .trackTips{
   padding: 5px;
   color: red;
