--- a/src/app/pages/member/calculation/calculation.page.html
+++ b/src/app/pages/member/calculation/calculation.page.html
@@ -51,7 +51,7 @@
           </ion-item>
           <ion-button expand="block" type="submit" [disabled]="!myForm.valid">计算</ion-button>
           <ion-chip class="tips" color="danger">
-            <ion-label>501KG以上输入邮编有美国高端空卡价格，敬请参选(使用完整模式可输入邮编)</ion-label>
+            <ion-label>501KG起输入邮编有美国空卡快线，敬请参选（使用完整模式可输入邮编），高值、大件欢迎进入...</ion-label>
           </ion-chip>
         </ion-list>
       </form>
@@ -116,7 +116,7 @@
           </ion-item>
           <ion-button expand="block" type="submit" [disabled]="!myForm.valid">计算</ion-button>
           <ion-chip class="tips" color="danger">
-            <ion-label>501KG以上输入邮编有美国高端空卡价格，敬请参选(使用完整模式可输入邮编)</ion-label>
+            <ion-label>501KG起输入邮编有美国空卡快线，敬请参选（使用完整模式可输入邮编），高值、大件欢迎进入...</ion-label>
           </ion-chip>
         </ion-list>
       </form>
