--- a/src/app/pages/member/calculation/calculation.page.html
+++ b/src/app/pages/member/calculation/calculation.page.html
@@ -110,6 +110,47 @@
               </ion-select-option>
             </ion-select>
           </ion-item>
+          <ion-item>
+            <ion-label>件数</ion-label>
+            <ion-input type="number" formControlName="piece"></ion-input>
+            <ion-checkbox #isInputSize formControlName="isEditSize"></ion-checkbox>
+            <ion-label>&nbsp;输入尺寸</ion-label>
+          </ion-item>
+          <ion-item *ngIf="isInputSize.checked" formArrayName="sizes">
+            <ion-grid>
+              <ion-row>
+                <ion-col>
+                  重(KG)
+                </ion-col>
+                <ion-col>
+                  长(CM)
+                </ion-col>
+                <ion-col>
+                  宽(CM)
+                </ion-col>
+                <ion-col>
+                  高(CM)
+                </ion-col>
+              </ion-row>
+              <ion-row *ngFor="let size of sizes.controls;let i=index">
+                <ng-container [formGroupName]="i">
+                
+                <ion-col>
+                  <input id="size-weight-{{i}}" type="text" placeholder="重量" style="width: 100%;" formControlName="ActualWeight" min="1">
+                </ion-col>
+                <ion-col>
+                  <input id="size-length-{{i}}" type="text"   placeholder="长" style="width: 100%;" formControlName="Length" min="1">
+                </ion-col>
+                <ion-col>
+                  <input id="size-width-{{i}}"  type="text"  placeholder="宽" style="width: 100%;" formControlName="Width" min="1">
+                </ion-col>
+                <ion-col>
+                  <input id="size-height-{{i}}"  type="text"  placeholder="高" style="width: 100%;" formControlName="Height" min="1">
+                </ion-col>
+                </ng-container>
+              </ion-row>
+            </ion-grid>
+          </ion-item>
           <ion-item *ngFor="let item of priceRuleTemplateInfoList">
             <ion-label>{{item.Name}}</ion-label>
             <ion-checkbox (ionChange)="ruleChanged(item,$event)" slot="start"></ion-checkbox>
