--- a/src/app/pages/member/calculation/calculation.page.html
+++ b/src/app/pages/member/calculation/calculation.page.html
@@ -111,14 +111,17 @@
             </ion-select>
           </ion-item>
           <ion-item>
-            <ion-label>件数</ion-label>
-            <ion-input type="number" formControlName="piece"></ion-input>
+            <!-- <ion-label>件数</ion-label>
+            <ion-input type="number" formControlName="piece"></ion-input> -->
+            <ion-label>输入尺寸</ion-label>
             <ion-checkbox #isInputSize formControlName="isEditSize"></ion-checkbox>
-            <ion-label>&nbsp;输入尺寸</ion-label>
           </ion-item>
           <ion-item *ngIf="isInputSize.checked" formArrayName="sizes">
             <ion-grid>
               <ion-row>
+                <ion-col>
+                  件数
+                </ion-col>
                 <ion-col>
                   重(KG)
                 </ion-col>
@@ -136,7 +139,10 @@
                 <ng-container [formGroupName]="i">
                 
                 <ion-col>
-                  <input id="size-weight-{{i}}" type="text" placeholder="重量" style="width: 100%;" formControlName="ActualWeight" min="1">
+                  <input id="size-piece-{{i}}" type="text" placeholder="件数" style="width: 100%;" formControlName="Piece" min="1">
+                </ion-col>
+                <ion-col>
+                  <input id="size-weight-{{i}}" type="text" placeholder="重量" style="width: 100%;" formControlName="Weight" min="1">
                 </ion-col>
                 <ion-col>
                   <input id="size-length-{{i}}" type="text"   placeholder="长" style="width: 100%;" formControlName="Length" min="1">
